--- a/src/index.css
+++ b/src/index.css
@@ -237,6 +237,8 @@ button {
   gap: inherit;
   width: 100%;
   height: 100%;
+  position: relative;
+  z-index: 10;
 }
 
 .navbar__item svg {
